[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/RayCast2D.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Jugador.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Electron cannon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Electron particle.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Trail.gd" type="Script" id=5]
[ext_resource path="res://Scripts/CameraShake.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sprites/Electron cannon hurt (1).png" type="Texture" id=7]
[ext_resource path="res://Assets/Otros/disparo_laser.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Otros/hit.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Otros/dash.wav" type="AudioStream" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 22.4304

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 5, 5, 0 )
flag_rotate_y = true
flag_disable_z = true
direction = Vector3( 2, 0, 0 )
spread = 100.0
flatness = 1.0
gravity = Vector3( 98, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 40.0
linear_accel_random = 0.2
scale = 0.2
scale_random = 0.2
color = Color( 0, 0.670588, 1, 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.4
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 100.0
gravity = Vector3( -10, 50, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.3
angular_velocity = 30.0
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle_move",
"speed": 30.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="Curve" id=8]
max_value = 5.0
bake_resolution = 50
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 2.59091 ), 0.894348, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 1, 1, 0.196078, 1, 1, 1, 1 )

[node name="Jugador" type="KinematicBody2D"]
script = ExtResource( 2 )
fire_rate = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Laser" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 1400, 0 )
collision_mask = 2147483649
collide_with_areas = true
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="Laser"]

[node name="Line2D" type="Line2D" parent="Laser"]
position = Vector2( 6.76967, 1 )
scale = Vector2( 2.76725, 1 )
points = PoolVector2Array( -1.42999, -2.051, 6.09098, -2 )
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="Cast particles" type="Particles2D" parent="Laser"]
position = Vector2( 43, -1 )
amount = 16
lifetime = 0.5
speed_scale = 2.0
local_coords = false
process_material = SubResource( 2 )

[node name="Collision particles" type="Particles2D" parent="Laser"]
position = Vector2( 43, -1 )
scale = Vector2( 0.08, 0.08 )
z_index = 15
amount = 5
lifetime = 0.5
speed_scale = 2.0
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="Beam particles" type="Particles2D" parent="Laser"]
position = Vector2( 363, -1 )
scale = Vector2( 2, 2 )
amount = 20
local_coords = false
process_material = SubResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = -1023
limit_top = -765
limit_right = 1343
limit_bottom = 638
smoothing_enabled = true
smoothing_speed = 2.0
editor_draw_limits = true

[node name="CameraShake" type="Node2D" parent="Camera"]
script = ExtResource( 6 )

[node name="ShakeTween" type="Tween" parent="Camera/CameraShake"]

[node name="Frecuencia" type="Timer" parent="Camera/CameraShake"]
one_shot = true

[node name="Duracion" type="Timer" parent="Camera/CameraShake"]
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 10.5, 0.5 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )
animation = "idle_move"
playing = true

[node name="Trail" type="Line2D" parent="."]
show_behind_parent = true
z_index = -3
points = PoolVector2Array( -133.375, -112, -100.375, -151 )
width = 15.0
width_curve = SubResource( 8 )
default_color = Color( 1, 1, 1, 0.72549 )
gradient = SubResource( 9 )
script = ExtResource( 5 )
is_emitting = true
resolution = 3.0
lifetime = 0.3
max_points = 50
target_path = NodePath("..")

[node name="Laser SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "SFX Laser"

[node name="Dash SFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -6, 1 )
stream = ExtResource( 10 )
volume_db = 3.0
bus = "SFX"

[node name="Hit SFX" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -7.429
bus = "SFX"
[connection signal="timeout" from="Camera/CameraShake/Frecuencia" to="Camera/CameraShake" method="_on_Frecuencia_timeout"]
[connection signal="timeout" from="Camera/CameraShake/Duracion" to="Camera/CameraShake" method="_on_Duracion_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
